# g4hepem

./: CMakeLists.txt  README.md
G4HepEm/: ad_type.h
G4HepEm/G4HepEm/include/: G4EmTrackingManager.hh  G4HepEmNoProcess.hh  G4HepEmProcess.hh  G4HepEmRunManager.hh  G4HepEmTrackingManager.hh
G4HepEm/G4HepEm/src/: G4EmTrackingManager.cc  G4HepEmProcess.cc  G4HepEmRunManager.cc  G4HepEmTrackingManager.cc  TrackingManagerHelper.hh  TrackingManagerHelper.icc
G4HepEm/G4HepEmData/: CMakeLists.txt
G4HepEm/G4HepEmData/include/: G4HepEmCuUtils.hh  G4HepEmData.hh  G4HepEmElectronData.hh  G4HepEmElementData.hh  G4HepEmGammaData.hh  G4HepEmMatCutData.hh  G4HepEmMaterialData.hh  G4HepEmParameters.hh  G4HepEmSBTableData.hh  G4HepEmState.hh
G4HepEm/G4HepEmData/src/: G4HepEmData.cc  G4HepEmElectronData.cc  G4HepEmElementData.cc  G4HepEmGammaData.cc  G4HepEmMatCutData.cc  G4HepEmMaterialData.cc  G4HepEmSBTableData.cc
G4HepEm/G4HepEmDataJsonIO/include/: G4HepEmDataJsonIO.hh
G4HepEm/G4HepEmDataJsonIO/src/: G4HepEmDataJsonIO.cc  G4HepEmDataJsonIOImpl.hh
G4HepEm/G4HepEmInit/include/: G4HepEmElectronInit.hh  G4HepEmElectronTableBuilder.hh  G4HepEmGammaInit.hh  G4HepEmGammaTableBuilder.hh  G4HepEmInitUtils.hh  G4HepEmMaterialInit.hh  G4HepEmParametersInit.hh  G4HepEmSBBremTableBuilder.hh  G4HepEmStateInit.hh
G4HepEm/G4HepEmInit/src/: G4HepEmElectronInit.cc  G4HepEmElectronTableBuilder.cc  G4HepEmGammaInit.cc  G4HepEmGammaTableBuilder.cc  G4HepEmInitUtils.cc  G4HepEmMaterialInit.cc  G4HepEmParametersInit.cc  G4HepEmSBBremTableBuilder.cc  G4HepEmStateInit.cc
G4HepEm/G4HepEmRun/include/: G4HepEmConstants.hh  G4HepEmElectronEnergyLossFluctuation.hh  G4HepEmElectronEnergyLossFluctuation.icc  G4HepEmElectronInteractionBrem.hh  G4HepEmElectronInteractionBrem.icc  G4HepEmElectronInteractionIoni.hh  G4HepEmElectronInteractionIoni.icc  G4HepEmElectronInteractionUMSC.hh  G4HepEmElectronInteractionUMSC.icc  G4HepEmElectronManager.hh  G4HepEmElectronManager.icc  G4HepEmElectronTrack.hh  G4HepEmExp.hh  G4HepEmGammaInteractionCompton.hh  G4HepEmGammaInteractionCompton.icc  G4HepEmGammaInteractionConversion.hh  G4HepEmGammaInteractionConversion.icc  G4HepEmGammaInteractionPhotoelectric.hh  G4HepEmGammaManager.hh  (+16 more)
apps/examples/TestEm3/: ATLASbar.mac  CMakeLists.txt  TestEm3.cc
apps/examples/TestEm3/include/: Run.hh
apps/examples/TestEm3/src/: DetectorMessenger.cc  EventAction.cc  PhysListG4Em.cc  PrimaryGeneratorAction.cc  Run.cc
cmake/: G4HepEmConfig.cmake.in
testing/TestUtils/: Hist.hh
(+7 files in other folders)
